# devlog

./: Cargo.toml
macros/: Cargo.toml
macros/src/: lib.rs
migrations/2021-11-07-034125_create-user/: down.sql  up.sql
src/: db.rs  main.rs  schema.rs  utils.rs
src/db_models/: sessions.rs
src/models/: sessions.rs
src/routes/: sessions.rs
