[package]
name = "devlog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4", features = ["postgres", "r2d2"] }
dotenv = { version = "0.15" }
rocket = { version = "0.5.0-rc.1", features = ["json"] }
serde = { version = "1" }
serde_json = { version = "1" }
